@@ -3,6 +3,7 @@ Pending changes in the mainline
 
 * New default permissions for worklists
 * New default permissions for tools/metrics-prometheus
+* New default permissions for tools/generate-uid
 
 
 2025-10-10 - v 0.10.2
